@@ -28,7 +28,7 @@
       </tr>
     <% end %>
 
-    <% if @comments.count == 0 %>
+    <% if @pager.record_count == 0 %>
       <tr class="empty">
         <td colspan="4">
           No comments to display.
