@@ -22,7 +22,7 @@
       </tr>
     <% end %>
 
-    <% if @posts.count == 0 %>
+    <% if @pager.record_count == 0 %>
       <tr class="empty">
         <td colspan="4">
           No blog posts to display.
