@@ -1,0 +1,15 @@
+<% if @prev_url || @next_url %>
+  <div class="pg robots-nocontent">
+    <% if @prev_url %>
+      <a rel="prev" class="prev" href="<%== @prev_url %>">
+        <%= @prev_text || '&laquo; Previous' %>
+      </a>
+    <% end %>
+
+    <% if @next_url %>
+      <a rel="next" class="next" href="<%== @next_url %>">
+        <%= @next_text || 'Next &raquo;' %>
+      </a>
+    <% end %>
+  </div>
+<% end %>
